# mlbookcamp-code

./: .gitignore
chapter-05-deployment/: 05-deploy.ipynb  Dockerfile  churn_serving.py  pyproject.toml  test_service.py
chapter-08-serverless/: Dockerfile  lambda_function.py  pyproject.toml  test.py  training.ipynb
