[tool.poetry]
name = "chapter-05-deployment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.1.2"
gunicorn = "^20.1.0"
fastapi = "^0.81.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
awsebcli = "^3.20.3"
Flask = "^2.2.2"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
