[tool.poetry]
name = "chapter-08-serverless"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ipykernel = "^6.15.1"
numpy = "^1.23.2"
tensorflow = "^2.9.1"
Pillow = "^9.2.0"
awscli = "^1.25.62"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
